# m-vis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  SECURITY.md  action.yml  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  releases.yml  tests.yml
benches/: memory_overhead.rs  mvis_benchmark.rs
doc/: mvis.1
src/: ci.rs  commands.rs  export.rs  lib.rs  main.rs  render.rs  scan.rs  stack_trace.rs  tui.rs  types.rs
src/core/: alloc_trace.rs  delta.rs  mod.rs  scan.rs  stack_trace.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/ui/: commands.rs  render.rs  theme.rs  tui.rs
src/utils/: formatting.rs  mod.rs  process.rs
tests/: ci_integration.rs  integration_tests.rs
tests/test_programs/: leak_test_c.c
