[package]
name = "memory-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.38.4"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",   # VirtualQueryEx lives here
    "Win32_System_Threading",           # OpenProcess, GetCurrentProcess
    "Win32_System_Memory",              # MEMORY_BASIC_INFORMATION, MEM_* consts
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
]
