[package]
name = "mvis"
version = "0.0.2"
edition = "2024"

[dependencies]
sysinfo = "0.38.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",   # VirtualQueryEx lives here
    "Win32_System_Threading",           # OpenProcess, GetCurrentProcess
    "Win32_System_Memory",              # MEMORY_BASIC_INFORMATION, MEM_* consts
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
]
